--- a/- document_processing.html
+++ b/- document_processing.html
@@ -168,14 +168,14 @@
 
 	<div class="home">
 		<div class="home_container">
-			<div class="home_background" style="background-image:url(images/categories.jpg)"></div>
+			<div class="home_background" style="background-image:url(images/banners/document_processing.jpg)"></div>
 			<div class="home_content_container">
 				<div class="container">
 					<div class="row">
 						<div class="col">
 							<div class="home_content">
-								<div class="home_title">Bidhaa zote<span>.</span></div>
-								<div class="home_text"><p>Tunauza bidhaa mbalimabali kutegemea na maitaji yako kwa bei nafuu.</p></div>
+								<div class="home_title">Typing & Editing, Printing, Scaning e.t.c<span>.</span></div>
+								<div class="home_text"><p>Sasa unaweza kututumia document yako na tuka hi edit.</p></div>
 							</div>
 						</div>
 					</div>
