--- a/checkout.html
+++ b/checkout.html
@@ -23,31 +23,29 @@
 				<div class="row">
 					<div class="col">
 						<div class="header_content d-flex flex-row align-items-center justify-content-start">
-							<div class="logo"><a href="#">Sublime.</a></div>
+							<div class="logo"><a href="#">PENTAROCK.</a></div>
 							<nav class="main_nav">
 								<ul>
 									<li class="hassubs active">
 										<a href="index.html">Home</a>
 										<ul>
-											<li><a href="categories.html">Categories</a></li>
-											<li><a href="product.html">Product</a></li>
-											<li><a href="cart.html">Cart</a></li>
 											<li><a href="checkout.html">Check out</a></li>
+                                            <li><a href="offer.html">Offer</a></li>
 											<li><a href="contact.html">Contact</a></li>
 										</ul>
 									</li>
 									<li class="hassubs">
-										<a href="categories.html">Categories</a>
+										<a href="Services.html">Services</a>
 										<ul>
-											<li><a href="categories.html">Category</a></li>
-											<li><a href="categories.html">Category</a></li>
-											<li><a href="categories.html">Category</a></li>
-											<li><a href="categories.html">Category</a></li>
-											<li><a href="categories.html">Category</a></li>
-										</ul>
+											<li><a href="- document_processing.html">Document processing</a></li>
+											<li><a href="- passport_size.html">Passport size</a></li>
+											<li><a href="- graphic_design.html">Graphic design</a></li>
+                                            <li><a href="- internet_services.html">Internet service</a></li>
+                                            <li><a href="- web_design.html">Web design</a></li>
+                                            <li><a href="#">Videography</a></li>
+								        </ul>
 									</li>
-									<li><a href="#">Accessories</a></li>
-									<li><a href="#">Offers</a></li>
+									<li><a href="product.html">Products</a></li>
 									<li><a href="contact.html">Contact</a></li>
 								</ul>
 							</nav>
@@ -176,7 +174,7 @@
 
 	<div class="home">
 		<div class="home_container">
-			<div class="home_background" style="background-image:url(images/cart.jpg)"></div>
+			<div class="home_background" style="background-image:url(images/updates.jpg)"></div>
 			<div class="home_content_container">
 				<div class="container">
 					<div class="row">
@@ -207,159 +205,53 @@
 				<div class="col-lg-6">
 					<div class="billing checkout_section">
 						<div class="section_title">Billing Address</div>
-						<div class="section_subtitle">Enter your address info</div>
-						<div class="checkout_form_container">
-							<form action="#" id="checkout_form" class="checkout_form">
-								<div class="row">
-									<div class="col-xl-6">
-										<!-- Name -->
-										<label for="checkout_name">First Name*</label>
-										<input type="text" id="checkout_name" class="checkout_input" required="required">
-									</div>
-									<div class="col-xl-6 last_name_col">
-										<!-- Last Name -->
-										<label for="checkout_last_name">Last Name*</label>
-										<input type="text" id="checkout_last_name" class="checkout_input" required="required">
-									</div>
-								</div>
-								<div>
-									<!-- Company -->
-									<label for="checkout_company">Company</label>
-									<input type="text" id="checkout_company" class="checkout_input">
-								</div>
-								<div>
-									<!-- Country -->
-									<label for="checkout_country">Country*</label>
-									<select name="checkout_country" id="checkout_country" class="dropdown_item_select checkout_input" require="required">
-										<option></option>
-										<option>Lithuania</option>
-										<option>Sweden</option>
-										<option>UK</option>
-										<option>Italy</option>
-									</select>
-								</div>
-								<div>
-									<!-- Address -->
-									<label for="checkout_address">Address*</label>
-									<input type="text" id="checkout_address" class="checkout_input" required="required">
-									<input type="text" id="checkout_address_2" class="checkout_input checkout_address_2" required="required">
-								</div>
-								<div>
-									<!-- Zipcode -->
-									<label for="checkout_zipcode">Zipcode*</label>
-									<input type="text" id="checkout_zipcode" class="checkout_input" required="required">
-								</div>
-								<div>
-									<!-- City / Town -->
-									<label for="checkout_city">City/Town*</label>
-									<select name="checkout_city" id="checkout_city" class="dropdown_item_select checkout_input" require="required">
-										<option></option>
-										<option>City</option>
-										<option>City</option>
-										<option>City</option>
-										<option>City</option>
-									</select>
-								</div>
-								<div>
-									<!-- Province -->
-									<label for="checkout_province">Province*</label>
-									<select name="checkout_province" id="checkout_province" class="dropdown_item_select checkout_input" require="required">
-										<option></option>
-										<option>Province</option>
-										<option>Province</option>
-										<option>Province</option>
-										<option>Province</option>
-									</select>
-								</div>
-								<div>
-									<!-- Phone no -->
-									<label for="checkout_phone">Phone no*</label>
-									<input type="phone" id="checkout_phone" class="checkout_input" required="required">
-								</div>
-								<div>
-									<!-- Email -->
-									<label for="checkout_email">Email Address*</label>
-									<input type="phone" id="checkout_email" class="checkout_input" required="required">
-								</div>
-								<div class="checkout_extra">
-									<div>
-										<input type="checkbox" id="checkbox_terms" name="regular_checkbox" class="regular_checkbox" checked="checked">
-										<label for="checkbox_terms"><img src="images/check.png" alt=""></label>
-										<span class="checkbox_title">Terms and conditions</span>
-									</div>
-									<div>
-										<input type="checkbox" id="checkbox_account" name="regular_checkbox" class="regular_checkbox">
-										<label for="checkbox_account"><img src="images/check.png" alt=""></label>
-										<span class="checkbox_title">Create an account</span>
-									</div>
-									<div>
-										<input type="checkbox" id="checkbox_newsletter" name="regular_checkbox" class="regular_checkbox">
-										<label for="checkbox_newsletter"><img src="images/check.png" alt=""></label>
-										<span class="checkbox_title">Subscribe to our newsletter</span>
-									</div>
-								</div>
-							</form>
-						</div>
-					</div>
+						<div class="section_subtitle">Enter your address info
+                                                      <br><br>
+						                              Designing your site for a better conversion rate is a guaranteed way to increase sales. But you also need to consider general UX principles for your online shop, and this goes double for mobile users.
+                                                      The majority of Internet traffic is now dominated by mobile. In 2017 the estimated total for mobile users across the whole Internet hit around 52%. If you aren’t optimizing for mobile then you’re doing ecommerce wrong.
+                                                      I’ve curated some design ideas to help you clean up that checkout page. These tips may not apply the same to every shop, and the differences hinge on the type of products you sell.
+                                                      Although if you’re serious about increasing conversions this guide is your first step to a larger mobile customer base.
+					
+                        </div>
+                    </div>
 				</div>
 
 				<!-- Order Info -->
 
 				<div class="col-lg-6">
 					<div class="order checkout_section">
-						<div class="section_title">Your order</div>
-						<div class="section_subtitle">Order details</div>
+						<div class="section_title">Cost details</div>
+						<div class="section_subtitle">Summary</div>
 
 						<!-- Order details -->
 						<div class="order_list_container">
 							<div class="order_list_bar d-flex flex-row align-items-center justify-content-start">
-								<div class="order_list_title">Product</div>
-								<div class="order_list_value ml-auto">Total</div>
+								<div class="order_list_title"><span>Service</span></div>
+								<div class="order_list_value ml-auto"><span>Cost</span></div>
 							</div>
 							<ul class="order_list">
 								<li class="d-flex flex-row align-items-center justify-content-start">
-									<div class="order_list_title">Cocktail Yellow dress</div>
-									<div class="order_list_value ml-auto">$59.90</div>
+									<div class="order_list_title">Picha 4</div>
+									<div class="order_list_value ml-auto">Tsh.1,500.00</div>
 								</li>
 								<li class="d-flex flex-row align-items-center justify-content-start">
-									<div class="order_list_title">Subtotal</div>
-									<div class="order_list_value ml-auto">$59.90</div>
+									<div class="order_list_title">Picha 8</div>
+									<div class="order_list_value ml-auto">Tsh.2,000.00</div>
 								</li>
 								<li class="d-flex flex-row align-items-center justify-content-start">
-									<div class="order_list_title">Shipping</div>
-									<div class="order_list_value ml-auto">Free</div>
+									<div class="order_list_title">Kusafisha picha</div>
+									<div class="order_list_value ml-auto">Tsh.500.00</div>
 								</li>
 								<li class="d-flex flex-row align-items-center justify-content-start">
-									<div class="order_list_title">Total</div>
-									<div class="order_list_value ml-auto">$59.90</div>
+									<div class="order_list_title">Usafirishaji</div>
+									<div class="order_list_value ml-auto">Bure</div>
 								</li>
 							</ul>
 						</div>
 
-						<!-- Payment Options -->
-						<div class="payment">
-							<div class="payment_options">
-								<label class="payment_option clearfix">Paypal
-									<input type="radio" name="radio">
-									<span class="checkmark"></span>
-								</label>
-								<label class="payment_option clearfix">Cach on delivery
-									<input type="radio" name="radio">
-									<span class="checkmark"></span>
-								</label>
-								<label class="payment_option clearfix">Credit card
-									<input type="radio" name="radio">
-									<span class="checkmark"></span>
-								</label>
-								<label class="payment_option clearfix">Direct bank transfer
-									<input type="radio" checked="checked" name="radio">
-									<span class="checkmark"></span>
-								</label>
-							</div>
-						</div>
-
+						
 						<!-- Order Text -->
-						<div class="order_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pharetra temp or so dales. Phasellus sagittis auctor gravida. Integ er bibendum sodales arcu id te mpus. Ut consectetur lacus.</div>
+						<div class="order_text">Sasa unaweza kupata hudumiwa kwa njia ya mtandao</div>
 						<div class="button order_button"><a href="#">Place Order</a></div>
 					</div>
 				</div>
@@ -376,16 +268,13 @@
 			<div class="row">
 				<div class="col">
 					<div class="footer_content d-flex flex-lg-row flex-column align-items-center justify-content-lg-start justify-content-center">
-						<div class="footer_logo"><a href="#">Sublime.</a></div>
-						<div class="copyright ml-auto mr-auto"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
+						<div class="footer_logo"><a href="index.html">Pentarock.</a></div>
+						<div class="copyright ml-auto mr-auto">
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> | All rights reserved</div>
 						<div class="footer_social ml-lg-auto">
 							<ul>
-								<li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-								<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+								<li><a href="https://api.whatsapp.com/send?phone=255689600622&text=hellow"><i class="fa fa-whatsapp" style="font-size:36px"></i></a></li>
+                                <li><a href="https://www.instagram.com/pentarock/"><i class="fa fa-instagram" style="font-size:36px"></i></a></li>
 							</ul>
 						</div>
 					</div>
