--- a/contact.html
+++ b/contact.html
@@ -37,10 +37,9 @@
 									<li class="hassubs">
 										<a href="Services.html">Services</a>
 										<ul>
-											<li><a href="doc_typing.html">Document typing</a></li>
-											<li><a href="print&scan.html">Printing & Scanning</a></li>
+											<li><a href="document_processing.html">Document processing</a></li>
 											<li><a href="passport_size.html">Passport size</a></li>
-											<li><a href="graphic_design.html">Graphic desing</a></li>
+											<li><a href="graphic_design.html">Graphic design</a></li>
                                             <li><a href="internet_services.html">Internet service</a></li>
                                             <li><a href="web_design.html">Web design</a></li>
                                             <li><a href="categories.html">Videography</a></li>
@@ -312,9 +311,9 @@ Tuambie wazo moja kuboresha elimu, afya au maji. Halafu, tuambie mwananchi afany
 				<div class="col">
 					<div class="footer_content d-flex flex-lg-row flex-column align-items-center justify-content-lg-start justify-content-center">
 						<div class="footer_logo"><a href="index.html">Pentarock.</a></div>
-						<div class="copyright ml-auto mr-auto"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+						<div class="copyright ml-auto mr-auto">
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This website is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <p>HUBE</p></a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
+</div>
 						<div class="footer_social ml-lg-auto">
 							<ul>
 								<li><a href="https://api.whatsapp.com/send?phone=255689600622&text=hellow"><i class="fa fa-whatsapp" style="font-size:36px"></i></a></li>
