--- a/index.html
+++ b/index.html
@@ -39,20 +39,19 @@
 										<a href="index.html">Home</a>
 										<ul>
 											<li><a href="checkout.html">Check out</a></li>
-                                            <li><a href="cart.html">Offer</a></li>
+                                            <li><a href="offer.html">Offer</a></li>
 											<li><a href="contact.html">Contact</a></li>
 										</ul>
 									</li>
 									<li class="hassubs">
 										<a href="Services.html">Services</a>
 										<ul>
-											<li><a href="doc_typing.html">Document typing</a></li>
-											<li><a href="print&scan.html">Printing & Scanning</a></li>
-											<li><a href="passport_size.html">Passport size</a></li>
-											<li><a href="graphic_design.html">Graphic desing</a></li>
-                                            <li><a href="internet_services.html">Internet service</a></li>
-                                            <li><a href="web_design.html">Web design</a></li>
-                                            <li><a href="categories.html">Videography</a></li>
+											<li><a href="- document_processing.html">Document processing</a></li>
+											<li><a href="- passport_size.html">Passport size</a></li>
+											<li><a href="- graphic_design.html">Graphic design</a></li>
+                                            <li><a href="- internet_services.html">Internet service</a></li>
+                                            <li><a href="- web_design.html">Web design</a></li>
+                                            <li><a href="#">Videography</a></li>
 								        </ul>
 									</li>
 									<li><a href="product.html">Products</a></li>
@@ -723,8 +722,8 @@ Anza manunuzi yako sasa na furahia kutumiwa mzigo wako bure kabisa.</p>
 				<div class="col">
 					<div class="footer_content d-flex flex-lg-row flex-column align-items-center justify-content-lg-start justify-content-center">
 						<div class="footer_logo"><a href="index.html">Pentarock.</a></div>
-						<div class="copyright ml-auto mr-auto"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved</div>
+						<div class="copyright ml-auto mr-auto">
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> | All rights reserved</div>
 						<div class="footer_social ml-lg-auto">
 							<ul>
 								<li><a href="https://api.whatsapp.com/send?phone=255689600622&text=hellow"><i class="fa fa-whatsapp" style="font-size:36px"></i></a></li>
