--- a/- internet_services.html
+++ b/- internet_services.html
@@ -171,12 +171,8 @@
 					<div class="row">
 						<div class="col">
 							<div class="home_content">
-								<div class="breadcrumbs">
-									<ul>
-										<li><a href="index.html">Home</a></li>
-										<li>Internet service</li>
-									</ul>
-								</div>
+								<div class="home_title">Bidhaa zote<span>.</span></div>
+								<div class="home_text"><p>Tunauza bidhaa mbalimabali kutegemea na maitaji yako kwa bei nafuu.</p></div>
 							</div>
 						</div>
 					</div>
