--- a/- passport_size.html
+++ b/- passport_size.html
@@ -200,7 +200,7 @@
 						                              Tunapiga Picha za passport kulingana na viwango vya passport vinavyotumiwa TZ vya 35mm x 45mm (mapana x marefu).
                                                       <br><br>
                                                       Picha 4 ni Tsh.1,500 tu na picha 8 ni Tsh.2,000.
-                                                      <br>
+                                                      <br><br><br>
                                                       Manufaa ya kutuchagua sisi:-
                                                        <ul>
                                                          <li> ► Unapata picha zenye ubora wa hari ya juu (high quality) na tunapiga kutegemea na hitaji lako.</li>
@@ -215,7 +215,7 @@
                         <div class="section_subtitle"><b><u>Picha za kusafisha (full or half size)</u></b>
                                                       <br><br>
                             
-                            <img src="images/picha_full.jpg" width="100%" alt="passport">
+                            <img src="images/full_picture.JPG" width="100%" alt="passport">
                             
                                                       <br><br>
 						                             Tunasafisha picha za kila aina; 4x6, 5x7, 6x8, A4, A3 n.k zozote zinawezekana na kuziweka kwenye fremu tofauti tofauti za kuwekea picha. 
