--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+`<!DOCTYPE html>
 <html lang="en">
 <head>
 <title>PERNTAROCK</title>
@@ -185,7 +185,7 @@
 							<div class="row">
 								<div class="col">
 									<div class="home_slider_content"  data-animation-in="fadeIn" data-animation-out="animate-out fadeOut">
-                                        <div class="home_slider_title">Kalibu katika tovuti ya <span>PENTAROCK</span>. </div>
+                                        <div class="home_slider_title">Karibu katika tovuti ya <span>PENTAROCK</span>. </div>
 										<div class="home_slider_subtitle">Pentarock stationery ni wauzaji wa vifaa  vya maofisini, mashuleni
                                             na vyuoni pamoja na kutoa huduma mbalimbali kama vile <span>typing</span>, <span>photocopy</span>, <span>printing</span>, <span>lamination</span>, <span>internet</span>, <span>graphic design</span>, <span>web design</span> n.k.</div>
 										<div class="button button_light home_button"><a href="services.html">HUDUMA ZETU</a></div>
@@ -205,7 +205,7 @@
 								<div class="col">
 									<div class="home_slider_content"  data-animation-in="fadeIn" data-animation-out="animate-out fadeOut">
 										<div class="home_slider_title">Pata bidhaa na huduma zetu kwa <span>haraka</span> na kwa <span>bei poa.</span></div>
-										<div class="home_slider_subtitle">Sisi ni wauzaji wa mda <span>mlefu</span>, <span>waaminifu</span> na <span>tunaudhoefu</span> katika <span>soko</span>, <span>bei</span> zetu zina unafuu ukilinganisha na <span>masoko</span> mengine. Tunatoa <span>offer</span> katika msimu huu wa mwaka mpya na <span>bei</span> inapungua kulingana na ukubwa wa <span>kazi</span>.</div>
+										<div class="home_slider_subtitle">Sisi ni wauzaji wa muda <span>mrefu</span>, <span>waaminifu</span> na <span>tuna uzoefu</span> katika <span>soko</span>, <span>bei</span> zetu zina unafuu ukilinganisha na <span>masoko</span> mengine. Tunatoa <span>offer</span> katika mwaka huu mzima 2019. <span>Bei</span> inapungua kulingana na ukubwa wa <span>kazi</span>.</div>
 										<div class="button button_light home_button"><a href="#">BIDHAA ZETU</a></div>
 									</div>
 								</div>
@@ -223,7 +223,7 @@
 								<div class="col">
 									<div class="home_slider_content"  data-animation-in="fadeIn" data-animation-out="animate-out fadeOut">
 										<div class="home_slider_title">Sasa unaweza kupata <span>huduma</span> zetu kwa njia ya <span>mtandao.</span></div>
-										<div class="home_slider_subtitle">Kwa kuwasiliana nasi tunaweza kukufikia maara hulipo tukakuudumia. Pia unaweza kututumia <span>picha ya document</span> yako tukakutengenezea nakala iliyochapishwa au kurekebishwa na <span>kutumiwa</span> papohapo.</div>
+										<div class="home_slider_subtitle">Kwa kuwasiliana nasi tunaweza kukufikia mahali ulipo tukakuhudumia. Pia unaweza kututumia <span>picha ya document</span> yako tukakutengenezea nakala iliyochapishwa au kurekebishwa na <span>kutumiwa</span> papohapo.</div>
 										<div class="button button_light home_button"><a href="#">ONA ZAIDI</a></div>
 									</div>
 								</div>
