--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,8 @@
 <meta name="description" content="Sublime project">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="styles/bootstrap4/bootstrap.min.css">
+<link href='https://fonts.googleapis.com/css?family=Faster One' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Rakkas' rel='stylesheet'>
 <link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" type="text/css" href="styles/contact.css">
 <link rel="stylesheet" type="text/css" href="styles/contact_responsive.css">
@@ -171,12 +173,8 @@
 					<div class="row">
 						<div class="col">
 							<div class="home_content">
-								<div class="breadcrumbs">
-									<ul>
-										<li><a href="index.html">Home</a></li>
-										<li>Contact</li>
-									</ul>
-								</div>
+								<div class="home_title">Contacts<span>.</span></div>
+								<div class="home_text"><p></p></div>
 							</div>
 						</div>
 					</div>
