--- a/index.html
+++ b/index.html
@@ -272,8 +272,12 @@
 						</div>
 					</div>
 					<div class="avds_small_content">
-						<div class="avds_title">►Typing ►Printing ►Scanning</div>
-						<div class="avds_link"><a href="categories.html">See More</a></div>
+						<div class="avds_title">
+                            <ul>
+                                <li>►Typing</li> <li>►Printing</li> <li>►Photocoping</li> <li>►Scanning</li> <li>►Lamination</li> <li>►Binding</li>
+                            </ul>
+                        </div>
+						<div class="avds_link"><a href="- document_processing.html">Ona zaidi</a></div>
 					</div>
 				</div>
 			</div>
