--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 					<div class="avds_large_content">
 						<div class="avds_title2">Passport size</div>
 						<div class="avds_text">Jipatie picha za passport ndani ya daika 3 na za kawaida full/half full. Pia tunasafisha picha.</div>
-						<div class="avds_link avds_link_large"><a href="passport_size.html">Ona zaidi</a></div>
+						<div class="avds_link avds_link_large"><a href="- passport_size.html">Ona zaidi</a></div>
 					</div>
 				</div>
 			</div>
