--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 									<div class="home_slider_content"  data-animation-in="fadeIn" data-animation-out="animate-out fadeOut">
                                         <div class="home_slider_title">Karibu katika tovuti ya <span>PENTAROCK</span>. </div>
 										<div class="home_slider_subtitle">Pentarock stationery ni wauzaji wa vifaa  vya maofisini, mashuleni
-                                            na vyuoni pamoja na kutoa huduma mbalimbali kama vile <span>typing</span>, <span>photocopy</span>, <span>printing</span>, <span>lamination</span>, <span>internet</span>, <span>graphic design</span>, <span>web design</span> n.k.</div>
+                                            na vyuoni pamoja na kutoa huduma mbalimbali kama vile <span>typing</span>, <span>printing</span>, <span>lamination</span>, <span>internet</span>, <span>graphic design</span>, <span>web design</span> n.k.</div>
 										<div class="button button_light home_button"><a href="services.html">HUDUMA ZETU</a></div>
 									</div>
 								</div>
@@ -255,11 +255,11 @@
 		</div>
 	</div>
 
-	<!-- Ads -->
+	<!-- Ads -->  <!-- H--> 
 
 	<div class="avds">
 		<div class="avds_container d-flex flex-lg-row flex-column align-items-start justify-content-between">
-			<div class="avds_small">
+			<!-- H1--><div class="avds_small">
 				<div class="avds_background" style="background-image:url(images/avds_small.jpg)"></div>
 				<div class="avds_small_inner">
 					<div class="avds_discount_container">
@@ -280,18 +280,20 @@
 						<div class="avds_link"><a href="- document_processing.html">Ona zaidi</a></div>
 					</div>
 				</div>
-			</div>
-			<div class="avds_large">
+			<!-- H1--></div>
+            
+			<!-- H2--><div class="avds_large">
 				<div class="avds_background" style="background-image:url(images/avds_large.jpg)"></div>
 				<div class="avds_large_container">
 					<div class="avds_large_content">
 						<div class="avds_title2">Passport size</div>
 						<div class="avds_text">Jipatie picha za passport ndani ya daika 3 na za kawaida full/half full. Pia tunasafisha picha.</div>
-						<div class="avds_link avds_link_large"><a href="- passport_size.html">Ona zaidi</a></div>
+						<div class="avds_link avds_link_large"><a href="-%passport_size.html">Ona zaidi</a></div>
 					</div>
 				</div>
-			</div>
-		</div>
+			<!-- H2--></div>
+		
+        </div>
 	</div>
 
 	<!-- Products -->
