--- a/- web_design.html
+++ b/- web_design.html
@@ -32,7 +32,6 @@
 									<li class="hassubs active">
 										<a href="index.html">Home</a>
 										<ul>
-											<li><a href="checkout.html">Check out</a></li>
                                             <li><a href="offer.html">Offer</a></li>
 											<li><a href="contact.html">Contact</a></li>
 										</ul>
@@ -42,7 +41,8 @@
 									<ul>
 											<li><a href="- document_processing.html">Document processing</a></li>
 											<li><a href="- passport_size.html">Passport size</a></li>
-											<li><a href="- graphic_design.html">Graphic design</a></li>
+											<li><a href="- identity_card.html">Identity card</a></li>
+                                            <li><a href="- graphic_design.html">Graphic design</a></li>
                                             <li><a href="- internet_services.html">Internet service</a></li>
                                             <li><a href="- web_design.html">Web design</a></li>
                                             <li><a href="#">Videography</a></li>
