--- a/- passport_size.html
+++ b/- passport_size.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Checkout</title>
+<title>Passport size</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="Web-design project">
@@ -30,7 +30,6 @@
 									<li class="hassubs active">
 										<a href="index.html">Home</a>
 										<ul>
-											<li><a href="checkout.html">Check out</a></li>
                                             <li><a href="offer.html">Offer</a></li>
 											<li><a href="contact.html">Contact</a></li>
 										</ul>
@@ -40,7 +39,8 @@
 										<ul>
 											<li><a href="- document_processing.html">Document processing</a></li>
 											<li><a href="- passport_size.html">Passport size</a></li>
-											<li><a href="- graphic_design.html">Graphic design</a></li>
+											<li><a href="- identity_card.html">Identity card</a></li>
+                                            <li><a href="- graphic_design.html">Graphic design</a></li>
                                             <li><a href="- internet_services.html">Internet service</a></li>
                                             <li><a href="- web_design.html">Web design</a></li>
                                             <li><a href="#">Videography</a></li>
@@ -171,8 +171,8 @@
 					<div class="row">
 						<div class="col">
 							<div class="home_content">
-								<div class="home_title">Bidhaa zote<span>.</span></div>
-								<div class="home_text"><p>Tunauza bidhaa mbalimabali kutegemea na maitaji yako kwa bei nafuu.</p></div>
+								<div class="home_title">Huduma za pasipoti<span>.</span></div>
+								<div class="home_text"><p></p></div>
 							</div>
 						</div>
 					</div>
