--- a/contact.html
+++ b/contact.html
@@ -38,13 +38,13 @@
 									<li class="hassubs">
 										<a href="Services.html">Services</a>
 										<ul>
-											<li><a href="document_processing.html">Document processing</a></li>
-											<li><a href="passport_size.html">Passport size</a></li>
+											<li><a href="- document_processing.html">Document processing</a></li>
+											<li><a href="- passport_size.html">Passport size</a></li>
 											<li><a href="- identity_card.html">Identity card</a></li>
-                                            <li><a href="graphic_design.html">Graphic design</a></li>
-                                            <li><a href="internet_services.html">Internet service</a></li>
-                                            <li><a href="web_design.html">Web design</a></li>
-                                            <li><a href="categories.html">Videography</a></li>
+                                            <li><a href="- graphic_design.html">Graphic design</a></li>
+                                            <li><a href="- internet_services.html">Internet service</a></li>
+                                            <li><a href="- web_design.html">Web design</a></li>
+                                            <li><a href="- videography.html">Videography</a></li>
 								        </ul>
 									</li>
 									<li><a href="product.html">Products</a></li>
