--- a/Services.html
+++ b/Services.html
@@ -174,8 +174,8 @@
 					<div class="row">
 						<div class="col">
 							<div class="home_content">
-								<div class="home_title">Bidhaa zote<span>.</span></div>
-								<div class="home_text"><p>Tunauza bidhaa mbalimabali kutegemea na maitaji yako kwa bei nafuu.</p></div>
+								<div class="home_title">Huduma zote<span>.</span></div>
+								<div class="home_text"><p>Chagua huduma uitakayo.</p></div>
 							</div>
 						</div>
 					</div>
