--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 									<li class="hassubs active">
 										<a href="index.html">Home</a>
 										<ul>
-											<li><a href="offer.html">Offer</a></li>
+											<li><a href="#">Offer</a></li>
 											<li><a href="contact.html">Contact</a></li>
 										</ul>
 									</li>
@@ -61,7 +61,7 @@
 							</nav>
 							<div class="header_extra ml-auto">
 								<div class="shopping_cart">
-									<a href="offer.html">
+									<a href="#">
 										<div>Offer</div>
 									</a>
 								</div>
