--- a/- internet_services.html
+++ b/- internet_services.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Iternet services</title>
+<title>Internet services</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="Sublime project">
@@ -9,6 +9,7 @@
 <link rel="stylesheet" type="text/css" href="styles/bootstrap4/bootstrap.min.css">
 <link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 <link href='https://fonts.googleapis.com/css?family=Faster One' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Rakkas' rel='stylesheet'>
 <link rel="stylesheet" type="text/css" href="styles/checkout.css">
 <link rel="stylesheet" type="text/css" href="styles/checkout_responsive.css">
 </head>
@@ -43,7 +44,7 @@
 											<li><a href="- graphic_design.html">Graphic design</a></li>
                                             <li><a href="- internet_services.html">Internet service</a></li>
                                             <li><a href="- web_design.html">Web design</a></li>
-                                            <li><a href="#">Videography</a></li>
+                                            <li><a href="- videography.html">Videography</a></li>
 								        </ul>
 									</li>
 									<li><a href="product.html">Products</a></li>
