--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 									<li class="hassubs active">
 										<a href="index.html">Home</a>
 										<ul>
-                                            <li><a href="offer.html">Offer</a></li>
+                                            <li><a href="#">Offer</a></li>
 											<li><a href="contact.html">Contact</a></li>
 										</ul>
 									</li>
@@ -53,7 +53,7 @@
 							</nav>
 							<div class="header_extra ml-auto">
 								<div class="shopping_cart">
-									<a href="offer.html">
+									<a href="#">
 										
 										<div>Offer</div>
 									</a>
