--- a/- graphic_design.html
+++ b/- graphic_design.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" type="text/css" href="styles/bootstrap4/bootstrap.min.css">
 <link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 <link href='https://fonts.googleapis.com/css?family=Faster One' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Rakkas' rel='stylesheet'>
 <link rel="stylesheet" type="text/css" href="plugins/OwlCarousel2-2.2.1/owl.carousel.css">
 <link rel="stylesheet" type="text/css" href="plugins/OwlCarousel2-2.2.1/owl.theme.default.css">
 <link rel="stylesheet" type="text/css" href="plugins/OwlCarousel2-2.2.1/animate.css">
@@ -46,7 +47,7 @@
                                             <li><a href="- graphic_design.html">Graphic design</a></li>
                                             <li><a href="- internet_services.html">Internet service</a></li>
                                             <li><a href="- web_design.html">Web design</a></li>
-                                            <li><a href="#">Videography</a></li>
+                                            <li><a href="- videograhy.html">Videography</a></li>
 								        </ul>
 									</li>
 									<li><a href="product.html">Products</a></li>
