--- a/- document_processing.html
+++ b/- document_processing.html
@@ -135,7 +135,7 @@
 						</ul>
 					</li>
 					<li class="page_menu_item has-children menu_mm">
-						<a href="categories.html">Categories<i class="fa fa-angle-down"></i></a>
+						<a href="categories.html">Services<i class="fa fa-angle-down"></i></a>
 						<ul class="page_menu_selection menu_mm">
 							<li class="page_menu_item menu_mm"><a href="- document_processing.html">Document processing<i class="fa fa-angle-down"></i></a></li>
 							<li class="page_menu_item menu_mm"><a href="- passport_size.html">Passport size<i class="fa fa-angle-down"></i></a></li>
