--- a/- graphic_design.html
+++ b/- graphic_design.html
@@ -31,20 +31,20 @@
 							<div class="logo"><a href="index.html">PENTAROCK.</a></div>
 							<nav class="main_nav">
 								<ul>
-									<li class="hassubs active">
+									<li class="hassubs">
 										<a href="index.html">Home</a>
 										<ul>
-                                            <li><a href="offer.html">Offer</a></li>
+                                            <li><a href="#">Offer</a></li>
 											<li><a href="contact.html">Contact</a></li>
 										</ul>
 									</li>
-									<li class="hassubs">
+									<li class="hassubs active">
 										<a href="Services.html">Services</a>
 										<ul>
 											<li><a href="- document_processing.html">Document processing</a></li>
 											<li><a href="- passport_size.html">Passport size</a></li>
 											<li><a href="- identity_card.html">Identity card</a></li>
-                                            <li><a href="- graphic_design.html">Graphic design</a></li>
+                                            <li class="active"><a href="- graphic_design.html">Graphic design</a></li>
                                             <li><a href="- internet_services.html">Internet service</a></li>
                                             <li><a href="- web_design.html">Web design</a></li>
                                             <li><a href="- videograhy.html">Videography</a></li>
@@ -56,7 +56,7 @@
 							</nav>
 							<div class="header_extra ml-auto">
 								<div class="shopping_cart">
-									<a href="offer.html">
+									<a href="#">
 										<div>Offer</div>
 									</a>
 								</div>
@@ -130,7 +130,7 @@
 					<li class="page_menu_item has-children menu_mm">
 						<a href="index.html">Home<i class="fa fa-angle-down"></i></a>
 						<ul class="page_menu_selection menu_mm">
-							<li class="page_menu_item menu_mm"><a href="offer.html">Offer<i class="fa fa-angle-down"></i></a></li>
+							<li class="page_menu_item menu_mm"><a href="#">Offer<i class="fa fa-angle-down"></i></a></li>
 							<li class="page_menu_item menu_mm"><a href="contact.html">Contact<i class="fa fa-angle-down"></i></a></li>
 						</ul>
 					</li>
