--- a/Services.html
+++ b/Services.html
@@ -33,7 +33,7 @@
 									<li class="hassubs active">
 										<a href="index.html">Home</a>
 										<ul>
-                                            <li><a href="offer.html">Offer</a></li>
+                                            <li><a href="#">Offer</a></li>
 											<li><a href="contact.html">Contact</a></li>
 										</ul>
 									</li>
@@ -55,7 +55,7 @@
 							</nav>
 							<div class="header_extra ml-auto">
 								<div class="shopping_cart">
-									<a href="offer.html">
+									<a href="#">
 										<div>Offer</div>
 									</a>
 								</div>
