--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@ Anza manunuzi yako sasa na furahia kutumiwa mzigo wako bure kabisa.</p>
 			<div class="row">
 				<div class="col">
 					<div class="footer_content d-flex flex-lg-row flex-column align-items-center justify-content-lg-start justify-content-center">
-						<div class="footer_logo"><a href="index.html">Pentarock.</a></div>
+						<div class="footer_logo"><a href="index.html">Pentaroc.</a></div>
 						<div class="copyright ml-auto mr-auto">
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> | All rights reserved
                         
