--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="Sublime project">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="shortcut icon" href="images/favicon.ico"/>
 <link rel="stylesheet" type="text/css" href="styles/bootstrap4/bootstrap.min.css">
 <link href='https://fonts.googleapis.com/css?family=Faster One' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Rakkas' rel='stylesheet'>
